--- a/frontend/src/styles/LandingPage.css
+++ b/frontend/src/styles/LandingPage.css
@@ -10,7 +10,9 @@
   --font-heading: 'Playfair Display', serif;
   --font-body: 'Lato', sans-serif;
 }
-
+::-webkit-scrollbar {
+  display: none;
+}
 *, *::before, *::after {
   box-sizing: border-box;
 }
@@ -42,25 +44,25 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 10px 0;
   position: fixed;
   top: 0;
   z-index: 1000;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  padding-right: 80px;
 }
 
 .navbar-container {
   display: flex;
-  justify-content: space-between;
   align-items: center;
   width: 90%;
   max-width: 1200px;
+  justify-content: center;
 }
 
 .navbar-links {
   list-style: none;
   display: flex;
-  gap: 20px;
+  gap: 35px;
   padding: 0;
   margin: 0;
 }
@@ -102,10 +104,12 @@ a {
 .navbar-logo {
   flex: 0 0 auto;
   text-align: center;
+  padding-left: 40px;
+  padding-right: 40px;
 }
 
 .navbar-logo img {
-  height: 60px;
+  height: 90px;
   object-fit: contain;
 }
 
